Fix Repository Error
Remove main

--- a/modules/base/templates/softfactory.list.erb
+++ b/modules/base/templates/softfactory.list.erb
@@ -4,4 +4,4 @@ deb http://ppa.launchpad.net/webupd8team/java/<%= @operatingsystem.downcase %> <
 deb-src http://ppa.launchpad.net/webupd8team/java/<%= @operatingsystem.downcase %> <%= @lsbdistcodename.downcase %> main
 deb http://ftp.kaist.ac.kr/mariadb/repo/5.5/<%= @operatingsystem.downcase %> <%= @lsbdistcodename.downcase %> main
 deb-src http://ftp.kaist.ac.kr/mariadb/repo/5.5/<%= @operatingsystem.downcase %> <%= @lsbdistcodename.downcase %> main
-deb http://cran.nexr.com/bin/linux/<%= @operatingsystem.downcase %>/<%= @lsbdistcodename.downcase %>/
+deb http://cran.nexr.com/bin/linux/<%= @operatingsystem.downcase %> <%= @lsbdistcodename.downcase %>/
